@@ -6,7 +6,7 @@ import com.automobilefleet.entities.Costumer;
 import com.automobilefleet.exceptions.ExceptionsConstants;
 import com.automobilefleet.exceptions.notfoundexception.NotFoundException;
 import com.automobilefleet.repositories.CostumerRepository;
-import com.automobilefleet.utils.costumer.CostumerFactoryUtils;
+import com.automobilefleet.utils.FactoryUtils;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
@@ -18,7 +18,7 @@ import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.modelmapper.ModelMapper;
 
-import java.util.List;
+import java.util.Collections;
 import java.util.Optional;
 
 @ExtendWith(MockitoExtension.class)
@@ -26,20 +26,19 @@ class CostumerServiceTest  {
     @InjectMocks
     private CostumerService costumerService;
     @Mock
-    private CostumerRepository costumerRepository;
+    private CostumerRepository repository;
     @Mock
     private ModelMapper mapper;
     private Costumer costumer;
-    private CostumerRequest costumerRequest;
-    private CostumerResponse costumerResponse;
+    private CostumerRequest request;
+    private CostumerResponse reponse;
     private static final long ID = 1L;
-    private static final long NON_EXISTING_ID = 99L;
 
     @BeforeEach
     void setUp() {
-        this.costumer = CostumerFactoryUtils.costumerBuilRaimunda();
-        this.costumerResponse = CostumerFactoryUtils.costumerResponseBuildRaimunda();
-        this.costumerRequest = CostumerFactoryUtils.costumerRequestBuildRaimunda();
+        this.costumer = FactoryUtils.createCostumer();
+        this.reponse = FactoryUtils.createCostumerResponse();
+        this.request = FactoryUtils.createCostumerRequest();
     }
 
     @AfterEach
@@ -48,106 +47,123 @@ class CostumerServiceTest  {
 
     @Test
     void shouldReturnAListWithThreeElement() {
-        final List<Costumer> costumerList = List.of(
-                CostumerFactoryUtils.costumerBuilRaimunda(),
-                CostumerFactoryUtils.costumerBuildGustavo(),
-                CostumerFactoryUtils.costumerBuildMaercela()
-        );
+        Mockito.when(this.repository.findAll()).thenReturn(Collections.singletonList(this.costumer));
+        Mockito.when(this.mapper.map(this.costumer, CostumerResponse.class)).thenReturn(this.reponse);
 
-        final CostumerResponse expectedRaimunda = CostumerFactoryUtils.costumerResponseBuildRaimunda();
-        final CostumerResponse expectedGustavo = CostumerFactoryUtils.costumerResponseBuildGustavo();
-        final CostumerResponse expectedMacercela = CostumerFactoryUtils.costumerReponseBuildMaercela();
+        final CostumerResponse actual = this.costumerService.listCostumer()
+                .stream()
+                .findFirst()
+                .orElse(null);
 
-        Mockito.when(this.costumerRepository.findAll()).thenReturn(costumerList);
-        Mockito.when(this.mapper.map(costumerList.get(0), CostumerResponse.class)).thenReturn(expectedRaimunda);
-        Mockito.when(this.mapper.map(costumerList.get(1), CostumerResponse.class)).thenReturn(expectedGustavo);
-        Mockito.when(this.mapper.map(costumerList.get(2), CostumerResponse.class)).thenReturn(expectedMacercela);
-
-        final List<CostumerResponse> actual = this.costumerService.listCostumer();
-
-        // Assert list has data
         Assertions.assertNotNull(actual);
-        Assertions.assertFalse(actual.isEmpty());
-        Assertions.assertEquals(3, actual.size());
+        Assertions.assertSame(this.reponse, actual);
 
-        this.assertionsDatas(expectedRaimunda, actual.get(0));
-        this.assertionsDatas(expectedGustavo, actual.get(1));
-        this.assertionsDatas(expectedMacercela, actual.get(2));
-    }
+        Assertions.assertEquals(this.reponse.getId(), actual.getId());
+        Assertions.assertEquals(this.reponse.getName(), actual.getName());
+        Assertions.assertEquals(this.reponse.getBirthDate(), actual.getBirthDate());
+        Assertions.assertEquals(this.reponse.getEmail(), actual.getEmail());
+        Assertions.assertEquals(this.reponse.getDriverLicense(), actual.getDriverLicense());
+        Assertions.assertEquals(this.reponse.getAddress(), actual.getAddress());
+        Assertions.assertEquals(this.reponse.getPhone(), actual.getPhone());
+        Assertions.assertEquals(this.reponse.getCreatedAt(), actual.getCreatedAt());
+        Assertions.assertEquals(this.reponse.getUpdatedAt(), actual.getUpdatedAt());
+        Assertions.assertEquals(this.reponse.getUpdatedAt(), actual.getUpdatedAt());
 
-    private void assertionsDatas(CostumerResponse expected, CostumerResponse actual) {
-        Assertions.assertEquals(expected.getId(), actual.getId());
-        Assertions.assertEquals(expected.getName(), actual.getName());
-        Assertions.assertEquals(expected.getBirthDate(), actual.getBirthDate());
-        Assertions.assertEquals(expected.getEmail(), actual.getEmail());
-        Assertions.assertEquals(expected.getDriverLicense(), actual.getDriverLicense());
-        Assertions.assertEquals(expected.getAddress(), actual.getAddress());
-        Assertions.assertEquals(expected.getPhone(), actual.getPhone());
-        Assertions.assertEquals(expected.getCreatedAt(), actual.getCreatedAt());
-        Assertions.assertEquals(expected.getUpdatedAt(), actual.getUpdatedAt());
-        Assertions.assertEquals(expected.getUpdatedAt(), actual.getUpdatedAt());
+        Mockito.verify(this.repository).findAll();
+        Mockito.verifyNoMoreInteractions(this.repository);
     }
 
     @Test
     void shouldReturnOneCostumerById() {
-        Mockito.when(this.costumerRepository.findById(ID)).thenReturn(Optional.ofNullable(this.costumer));
-        Mockito.when(this.mapper.map(this.costumer, CostumerResponse.class)).thenReturn(this.costumerResponse);
+        Mockito.when(this.repository.findById(ID)).thenReturn(Optional.ofNullable(this.costumer));
+        Mockito.when(this.mapper.map(this.costumer, CostumerResponse.class)).thenReturn(this.reponse);
 
-        CostumerResponse expected =  this.costumerService.getCostumerById(ID);
-        Assertions.assertNotNull(expected);
+        final CostumerResponse actual =  this.costumerService.getCostumerById(ID);
+
+        // Assertions
+        Assertions.assertNotNull(actual);
+
         Assertions.assertDoesNotThrow(() -> new NotFoundException(ExceptionsConstants.COSTUMER_NOT_FOUND));
-        Assertions.assertInstanceOf(CostumerResponse.class, expected);
-        Assertions.assertEquals(expected, this.costumerResponse);
 
-        Mockito.verify(this.costumerRepository).findById(ID);
-        Mockito.verifyNoMoreInteractions(this.costumerRepository);
+        Assertions.assertInstanceOf(CostumerResponse.class, actual);
+
+        Assertions.assertSame(this.reponse, actual);
+
+        Assertions.assertEquals(this.reponse.getId(), actual.getId());
+        Assertions.assertEquals(this.reponse.getName(), actual.getName());
+        Assertions.assertEquals(this.reponse.getBirthDate(), actual.getBirthDate());
+        Assertions.assertEquals(this.reponse.getEmail(), actual.getEmail());
+        Assertions.assertEquals(this.reponse.getDriverLicense(), actual.getDriverLicense());
+        Assertions.assertEquals(this.reponse.getAddress(), actual.getAddress());
+        Assertions.assertEquals(this.reponse.getPhone(), actual.getPhone());
+        Assertions.assertEquals(this.reponse.getCreatedAt(), actual.getCreatedAt());
+        Assertions.assertEquals(this.reponse.getUpdatedAt(), actual.getUpdatedAt());
+        Assertions.assertEquals(this.reponse.getUpdatedAt(), actual.getUpdatedAt());
+
+        Mockito.verify(this.repository).findById(ID);
+        Mockito.verifyNoMoreInteractions(this.repository);
     }
 
     @Test
     void shouldThrowsCostumerNotFoundExceptionWhenIdNonExisting() {
-        Mockito.when(this.costumerRepository.findById(NON_EXISTING_ID)).thenReturn(Optional.empty());
-        Assertions.assertThrows(NotFoundException.class, () -> this.costumerService.getCostumerById(NON_EXISTING_ID));
+        Mockito.when(this.repository.findById(ID)).thenReturn(Optional.empty());
+        Assertions.assertThrows(NotFoundException.class, () -> this.costumerService.getCostumerById(ID));
 
-        Mockito.verify(this.costumerRepository).findById(NON_EXISTING_ID);
-        Mockito.verifyNoMoreInteractions(this.costumerRepository);
+        Mockito.verify(this.repository).findById(ID);
+        Mockito.verifyNoMoreInteractions(this.repository);
     }
 
     @Test
     void shouldSaveCostumerWhenCallingSaveCostumer() {
-        Mockito.when(this.costumerRepository.save(this.costumer)).thenReturn(this.costumer);
-        Mockito.when(this.mapper.map(this.costumer, CostumerResponse.class)).thenReturn(this.costumerResponse);
-        Mockito.when(this.mapper.map(this.costumerRequest, Costumer.class)).thenReturn(this.costumer);
+        Mockito.when(this.repository.save(this.costumer)).thenReturn(this.costumer);
+        Mockito.when(this.mapper.map(this.costumer, CostumerResponse.class)).thenReturn(this.reponse);
+        Mockito.when(this.mapper.map(this.request, Costumer.class)).thenReturn(this.costumer);
 
-        CostumerResponse expected = this.costumerService.saveCostumer(this.costumerRequest);
-
-        Assertions.assertNotNull(expected);
-        Assertions.assertInstanceOf(CostumerResponse.class, expected);
-        Assertions.assertEquals(expected, this.costumerResponse);
+        final CostumerResponse actual = this.costumerService.saveCostumer(this.request);
+        this.basicAssertions(actual);
     }
 
     @Test
     void shouldUpdateCostumerWhenCallingUpdate() {
-        String nameUpdate = "Update Working";
-        this.costumerRequest.setName(nameUpdate);
-        this.costumerResponse.setName(nameUpdate);
+        final String expected = "Update Working";
+        this.request.setName(expected);
+        this.costumer.setName(expected);
+        this.reponse.setName(expected);
 
-        // Configurar o comportamento dos mocks
-        Mockito.when(this.costumerRepository.findById(ID)).thenReturn(Optional.of(this.costumer));
-        Mockito.when(this.mapper.map(this.costumer, CostumerResponse.class)).thenReturn(this.costumerResponse);
+        // Config mocks behavior
+        Mockito.when(this.repository.findById(ID)).thenReturn(Optional.of(this.costumer));
+        Mockito.when(this.mapper.map(this.costumer, CostumerResponse.class)).thenReturn(this.reponse);
 
-        // Chamar o método a ser testado
-        CostumerResponse result = this.costumerService.updateCostumer(ID, this.costumerRequest);
+        // Call the method to be tested
+        final CostumerResponse actual = this.costumerService.updateCostumer(ID, this.request);
 
-        // Verificar o resultado
-        Assertions.assertNotNull(result);
-        Assertions.assertEquals(this.costumerResponse.getId(), result.getId());
-        Assertions.assertEquals(this.costumerResponse.getName(), result.getName());
-        Assertions.assertSame(this.costumerResponse, result);
+        // Assertions
+        Assertions.assertNotNull(actual);
+        Assertions.assertEquals(this.reponse.getId(), actual.getId());
+        Assertions.assertEquals(expected, actual.getName());
+        Assertions.assertSame(this.reponse, actual);
 
-        // Verificar as interações dos mocks
-        Mockito.verify(this.costumerRepository).findById(ID);
-        Mockito.verify(costumerRepository).save(this.costumer);
+        // Check mock interactions
+        Mockito.verify(this.repository).findById(ID);
+        Mockito.verify(repository).save(this.costumer);
         Mockito.verify(this.mapper).map(this.costumer, CostumerResponse.class);
-        Mockito.verifyNoMoreInteractions(this.costumerRepository, this.mapper);
+        Mockito.verifyNoMoreInteractions(this.repository, this.mapper);
+    }
+
+    private void basicAssertions(CostumerResponse actual) {
+        Assertions.assertNotNull(actual);
+        Assertions.assertInstanceOf(CostumerResponse.class, actual);
+        Assertions.assertSame(this.reponse, actual);
+        Assertions.assertEquals(this.reponse.getId(), actual.getId());
+        Assertions.assertEquals(this.reponse.getName(), actual.getName());
+        Assertions.assertEquals(this.reponse.getBirthDate(), actual.getBirthDate());
+        Assertions.assertEquals(this.reponse.getEmail(), actual.getEmail());
+        Assertions.assertEquals(this.reponse.getDriverLicense(), actual.getDriverLicense());
+        Assertions.assertEquals(this.reponse.getAddress(), actual.getAddress());
+        Assertions.assertEquals(this.reponse.getPhone(), actual.getPhone());
+        Assertions.assertEquals(this.reponse.getCreatedAt(), actual.getCreatedAt());
+        Assertions.assertEquals(this.reponse.getUpdatedAt(), actual.getUpdatedAt());
+        Assertions.assertEquals(this.reponse.getUpdatedAt(), actual.getUpdatedAt());
+        Assertions.assertEquals(this.reponse, actual);
     }
 }
